Tolerations2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  labels:
    app: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      name: httpd-pod
      labels:
        app: webserver
    spec:
     containers:
       - name: myhttpd
         image: httpd
     tolerations:
       - key: slave1
         value: intelliqit1
         operator: Equal
         effect: NoSchedule
...
