Volumes1.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    app: db
spec:
  containers:
    - name: mydb
      image: intelliqit/redisnew
      volumeMounts:
        - name: myvolume
          mountPath: /data/redis
  volumes:
    - name: myvolume
      emptyDir: {}
...
