Volumes3.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: db
spec:
  containers:
    - name: mydb
      image: mysql
      volumeMounts:
        - name: new-volume
          mountPath: /var/lib/mysql
  volumes:
    - name: new-volume
      persistentVolumeClaim:
        claimName: my-pvc
...
