deployment2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: db
    author: intelliqit
spec:
  replicas: 3
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      name: mysql-pod
      labels:
        app: db
    spec:
      containers:
        - name: mydb
          image: mysql
...
