pod-definition-secret.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: db
spec:
  containers:
    - name: mydb
      image: mysql
...
