service1.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
  labels:
    app: myservice
spec:
  type: NodePort
  ports:
    - targetPort: 80
      nodePort: 30008
      port: 80
  selector:
    app: proxy
...
