service2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: laodbalancer-service
  labels:
    app: lb
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30009
  selector:
    type: proxy
    author: intelliqit
...
