service3.yml
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
  labels:
    author: intelliqit
spec:
  ports:
    - targetPort: 5432
      port: 5432
  selector:
   type: db
   author: intelliqit
...
